fixes to cumulative layout shift

--- a/packages/excalidraw/css/styles.scss
+++ b/packages/excalidraw/css/styles.scss
@@ -680,6 +680,7 @@ body.excalidraw-cursor-resize * {
 
   .excalidraw-wysiwyg {
       will-change: transform;
+      transform-origin: top left;
   }
 
   /* remove default paragraph margins inside the scratchpad editor */
